Integrate Sqlite into EDiary application. Sqlite file, EDiary.db has been added.

--- a/EdiaryApp/EdiaryApp/App.config
+++ b/EdiaryApp/EdiaryApp/App.config
@@ -3,4 +3,7 @@
 	<appSettings>
 		<add key="EdairyFolder" value="C:\\Users\\Pramod\\Desktop\\EDairy\\"/>
 	</appSettings>
+	<connectionStrings>
+		<add name="EdiarySqlite" connectionString="Data Source=.\EDiary.db" providerName="System.Data.SqliteClient" />
+	</connectionStrings>
 </configuration>
