--- a/EdiaryApp/EdiaryApp/EdiaryApp.csproj
+++ b/EdiaryApp/EdiaryApp/EdiaryApp.csproj
@@ -8,7 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="EDiary.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="EDiary.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
